force-app/main/default/objects/Receipt__c/fields/Bouncing_Date__c.field-meta.xml
<CustomField>
    <fullName>Bouncing_Date__c</fullName>
    <label>Bouncing Date</label>
    <type>Date</type>
</CustomField>