force-app/main/default/objects/Receipt__c/fields/Cancellation_Req_Send_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Req_Send_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancellation Req Send To SAP</label>
    <type>Checkbox</type>
</CustomField>