force-app/main/default/objects/Receipt__c/fields/Cheque_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Bounced</label>
    <type>Checkbox</type>
</CustomField>