force-app/main/default/objects/Receipt__c/fields/Cheque_Trasaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Trasaction_Number__c</fullName>
    <label>Cheque/Trasaction Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>