force-app/main/default/objects/Receipt__c/fields/Daily_Log__c.field-meta.xml
<CustomField>
    <fullName>Daily_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Log</label>
    <referenceTo>DailyLog__c</referenceTo>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>