force-app/main/default/objects/Receipt__c/fields/Deducted__c.field-meta.xml
<CustomField>
    <fullName>Deducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deducted</label>
    <type>Checkbox</type>
</CustomField>