force-app/main/default/objects/Receipt__c/fields/Initial_On_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Initial_On_Account_Value__c</fullName>
    <formula>On_Account_Value__c  +  Spent_On_Account_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial On Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>