force-app/main/default/objects/Receipt__c/fields/On_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Value__c</fullName>
    <label>On Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>