force-app/main/default/objects/Receipt__c/fields/Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Id__c</fullName>
    <displayFormat>REC-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Receipt Id</label>
    <type>AutoNumber</type>
</CustomField>