force-app/main/default/objects/Receipt__c/fields/SalesInvoice_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>SalesInvoice_Payment_Type__c</fullName>
    <formula>TEXT(Sales_Invoice__r.Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesInvoice Payment Type</label>
    <type>Text</type>
</CustomField>