force-app/main/default/objects/Receipt__c/fields/SAP_Cancellation_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cancellation_Code__c</fullName>
    <label>SAP Cancellation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>