force-app/main/default/objects/Receipt__c/fields/Skip_Record_Edit_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Record_Edit_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Record Edit Validation</label>
    <type>Checkbox</type>
</CustomField>