force-app/main/default/objects/Receipt__c/fields/Spent_On_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Spent_On_Account_Value__c</fullName>
    <label>Spent On Account Value</label>
    <summarizedField>Receipt_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Receipt_Item__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>