force-app/main/default/objects/Receipt__c/fields/Syn_Outstanding_Req__c.field-meta.xml
<CustomField>
    <fullName>Syn_Outstanding_Req__c</fullName>
    <label>Syn Outstanding Req</label>
    <type>DateTime</type>
</CustomField>