force-app/main/default/objects/Receipt__c/fields/Trip__c.field-meta.xml
<CustomField>
    <fullName>Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>