force-app/main/default/objects/Receipt__c/fields/vehicle_crew__c.field-meta.xml
<CustomField>
    <fullName>vehicle_crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vehicle crew</label>
    <referenceTo>vehicle_crew__c</referenceTo>
    <relationshipName>Collections</relationshipName>
    <type>Lookup</type>
</CustomField>