force-app/main/default/objects/Receipt__c/validationRules/Amount_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL( Type__c , &apos;Against Invoice&apos;),
								ISPICKVAL( Type__c , &apos;Multiple Invoice&apos;) ), 
				OR(ISBLANK(  Amount__c ), 
				Amount__c = 0 ))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Enter Valid Amount</errorMessage>
</ValidationRule>