force-app/main/default/objects/Receipt__c/validationRules/On_Account_Value_more_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Account_Value_more_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISNEW() , ISPICKVAL( Type__c , &apos;On Account&apos;),  NOT(ISBLANK(On_Account_Value__c )), On_Account_Value__c &lt;= 0  )</errorConditionFormula>
    <errorDisplayField>On_Account_Value__c</errorDisplayField>
    <errorMessage>Enter Valid On Account Value</errorMessage>
</ValidationRule>