force-app/main/default/objects/Receipt__c/validationRules/On_Account_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Account_Value_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;On Account&apos;), ISBLANK(  On_Account_Value__c  ) )</errorConditionFormula>
    <errorDisplayField>On_Account_Value__c</errorDisplayField>
    <errorMessage>On Account Value cannot be empty.</errorMessage>
</ValidationRule>