force-app/main/default/objects/Receipt__c/validationRules/Restrict_record_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_record_edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
				 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
     NOT(ISNEW()),
    PRIORVALUE(Sent_to_SAP__c) &lt;&gt; FALSE  
 )</errorConditionFormula>
    <errorMessage>This record is not editable</errorMessage>
</ValidationRule>