force-app/main/default/objects/Receipt__c/validationRules/Sales_Invoice_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Invoice_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;Against Invoice&apos;),   ISBLANK( Sales_Invoice__c )  )</errorConditionFormula>
    <errorDisplayField>Sales_Invoice__c</errorDisplayField>
    <errorMessage>Sales Invoice cannot be empty.</errorMessage>
</ValidationRule>