force-app/main/default/objects/Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>On_Account_Value__c</columns>
    <columns>Mode_of_payment__c</columns>
    <columns>Customer__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Route__c</columns>
    <columns>Cheque_Trasaction_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Receipt_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>