force-app/main/default/objects/Receipt__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>On_Account_Value__c</columns>
    <columns>Mode_of_payment__c</columns>
    <columns>Customer__c</columns>
    <columns>Receipt_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Route__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>